community/py3-distutils-extra: upgrade to 2.43

--- a/community/py3-distutils-extra/APKBUILD
+++ b/community/py3-distutils-extra/APKBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=py3-distutils-extra
 _pkgname=python-distutils-extra
-pkgver=2.42
-pkgrel=1
+pkgver=2.43
+pkgrel=0
 pkgdesc="Enhanced distutils package for python"
 url="https://launchpad.net/python-distutils-extra"
 arch="noarch"
 license="GPL-2.0-or-later"
 depends="py3-setuptools"
-source="https://salsa.debian.org/debian/$_pkgname/-/archive/$pkgver/$_pkgname-$pkgver.tar.bz2"
+source="https://salsa.debian.org/python-team/modules/python-distutils-extra/-/archive/$pkgver/python-distutils-extra-$pkgver.tar.bz2"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 replaces="py-distutils-extra" # Backwards compatibility
@@ -26,4 +26,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="3f69aa3617c4b6f33bee989f8b3612aa12b4ce3c5e07f47799209aa402640078d738e15a1e883afb7062d177ed70ff235af6b09910e4f2cc890e013998eca832  python-distutils-extra-2.42.tar.bz2"
+sha512sums="a0a3ba147403e0096fd1c9f56eb898282edc7a1caf460128245730bf683d97af8706390127f2e997256b2ee50bc267125b2071b47e2eeac70ca0e2d58fa84176  python-distutils-extra-2.43.tar.bz2"
