--- a/testing/aisleriot/APKBUILD
+++ b/testing/aisleriot/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Antoine Fontaine <antoine.fontaine@epfl.ch>
 pkgname="aisleriot"
 pkgver="3.22.10"
-pkgrel=2
+pkgrel=3
 pkgdesc="Solitaire and other card games for GNOME"
 url="https://wiki.gnome.org/Apps/Aisleriot"
 arch="all !s390x"
 license="GPL-3.0-or-later"
+depends="guile"
 makedepends="meson bash librsvg-dev guile-dev libxml2 libxml2-dev libxml2-utils
 	itstool gtk+3.0-dev libcanberra-dev gmp-dev"
 subpackages="$pkgname-doc $pkgname-lang"
