main/spice: upgrade to 0.14.3

--- a/main/spice/APKBUILD
+++ b/main/spice/APKBUILD
@@ -1,20 +1,33 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=spice
-pkgver=0.14.2
-pkgrel=1
+pkgver=0.14.3
+pkgrel=0
 pkgdesc="Implements the SPICE protocol"
 url="http://www.spice-space.org/"
 arch="all"
 license="LGPL-2.0-or-later"
-depends_dev="spice-protocol pixman-dev libxinerama-dev"
-makedepends="$depends_dev alsa-lib-dev libjpeg-turbo-dev libxrandr-dev lz4-dev
-	cyrus-sasl-dev libxfixes-dev python3-dev bash cegui06-dev py3-parsing
-	py3-six glib-dev opus-dev openssl-dev gstreamer-dev gst-plugins-base-dev
-	automake autoconf libtool"
-subpackages="$pkgname-dev $pkgname-server"
+makedepends="
+	meson
+	spice-protocol
+	glib-dev
+	gdk-pixbuf-dev
+	pixman-dev
+	openssl-dev
+	libjpeg-turbo-dev
+	zlib-dev
+	opus-dev
+	gstreamer-dev
+	gst-plugins-base-dev
+	orc-dev
+	lz4-dev
+	cyrus-sasl-dev
+	py3-six
+	py3-parsing
+	"
+subpackages="$pkgname-static $pkgname-dev $pkgname-server"
 source="https://www.spice-space.org/download/releases/spice-server/spice-$pkgver.tar.bz2
-	0001-Disable-failing-tests-on-some-arches.patch
+	failing-tests.patch
 	"
 
 # secfixes:
@@ -29,34 +42,27 @@ source="https://www.spice-space.org/download/releases/spice-server/spice-$pkgver
 #     - CVE-2016-9578
 
 build() {
-	autoreconf -vif
-	cd "$builddir"
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
+	meson \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
-		--infodir=/usr/share/info \
 		--localstatedir=/var \
-		--enable-gui \
-		--enable-client \
-		--disable-smartcard \
-		--disable-celt051 \
-		--enable-lz4 \
-		--enable-opus \
-		--enable-gstreamer=1.0
-	make WARN_CFLAGS=''
+		--buildtype=plain \
+		-Dgstreamer=1.0 \
+		-Dlz4=true \
+		-Dsasl=true \
+		-Dopus=enabled \
+		-Dsmartcard=disabled \
+		. output
+	ninja -C output
 }
 
 check() {
-	cd "$builddir"
-	make check
+	ninja -C output test
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
 server() {
@@ -65,5 +71,5 @@ server() {
 	mv "$pkgdir"/usr/lib/*server.so.* "$subpkgdir"/usr/lib/
 }
 
-sha512sums="1093b618ea4a7ff31944429ce2903abecfc8d20c35f2d9c8c837a6e053ee429c0115e40665542637a717869209523ac05d15cdb5e77563102d5d3915e4aaaf76  spice-0.14.2.tar.bz2
-0ce5c4077a436a8895452557529d4ad118a578b8e6d157e1d8453105b7456496a0f85da0821afafbae7359a3fd6fe46d47de3bf639fa9bdb9a535ce68ab17dfa  0001-Disable-failing-tests-on-some-arches.patch"
+sha512sums="9ecdc455ff25c71ac1fe6c576654b51efbfb860110bd6828065d23f7462d5c5cac772074d1a40f033386258d970b77275b2007bcfdffb23fdff2137154ea46e4  spice-0.14.3.tar.bz2
+10104feb05ce9d70074cad58efb9772cc8521666ea1c694bedf5c3ecfaa15a755324ac989b94d3be61e69be4286ab8369b900452fe98864596dcbc45d4a896b5  failing-tests.patch"
