community/e2tools: upgrade to 0.1.0

--- a/community/e2tools/APKBUILD
+++ b/community/e2tools/APKBUILD
@@ -1,24 +1,16 @@
 # Contributor: Daniel Santana <daniel@santana.tech>
 # Maintainer: Daniel Santana <daniel@santana.tech>
 pkgname=e2tools
-pkgver=0.0.16
-pkgrel=1
+pkgver=0.1.0
+pkgrel=0
 pkgdesc="Utilities for manipulating files in an ext2/ext3 filesystem"
 url="https://e2tools.github.io/"
 arch="all"
 license="GPL-2.0-only"
 makedepends="e2fsprogs-dev"
+checkdepends="e2fsprogs"
 subpackages="$pkgname-doc"
-source="https://github.com/e2tools/e2tools/releases/download/$pkgver/e2tools-$pkgver.tar.gz
-	e2cp.1
-	e2ln.1
-	e2ls.1
-	e2mkdir.1
-	e2mv.1
-	e2rm.1
-	e2tail.1
-	e2tools.7
-	"
+source="https://github.com/e2tools/e2tools/releases/download/v$pkgver/e2tools-$pkgver.tar.gz"
 
 build() {
 	./configure \
@@ -34,20 +26,6 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
-	install -dm 0755 "$pkgdir"/usr/share/man/man1
-	install -dm 0755 "$pkgdir"/usr/share/man/man7
-	install -pm 0644 "$srcdir"/e2tools.7 "$pkgdir"/usr/share/man/man7
-	for man in e2cp.1 e2ln.1 e2ls.1 e2mkdir.1 e2mv.1 e2rm.1 e2tail.1; do
-		install -pm 0644 "$srcdir/$man" "$pkgdir"/usr/share/man/man1
-	done
 }
 
-sha512sums="8be79385c07027286951755a7ca0407215b517d4abba5546a0958fcb5e8feaffc993d35dd56bde39e14d397875941fc812c713db3d27247cd8e9ee7ed6a153b4  e2tools-0.0.16.tar.gz
-11c91db4c1997e528e00f928d75e7330424b432ecbf03ac5f84ccf9bebba590a36839de4db1020c8fdbc43994669bc8ca027ede266fff0932bcdba01da614ffd  e2cp.1
-3ac5f23671444b4c77a0f51c8bca5eb3f3c90b5210e6ccfc9a6d076fe84075d63c863810a2140364625069a9cdc2541bd47ad43d0d785e1b4f58de3b74996a2c  e2ln.1
-86f129044eab493ce4fd81d892468388c9eac20f318f3e11f396090d4bed93d9bfc5cda1d48a522ec619271fcaa7f154f63c40095da9e93ad8dd2e55e075e8ed  e2ls.1
-4fbec4742c5b3b4b78544b9a0b50834b79ea08872eebaa81b41220c0d57c05891289684dff36faf6114235f78874d5d7f075a716aa8c72760b307782be01481d  e2mkdir.1
-2a4f3d1c6cb7dda083e1934523f0ec27200deb53b43359e5d366bedc0e15dd4f0f9cf9ad993089aa34c30a30810aab51ffc204181451055cf3d2050b774e544b  e2mv.1
-c2c85abe3360a202edb0bdde762e177eb1aec9a9775ae56716a3d45abbb2107e9cadebd73519932eaab413a054d870aaf547cc4ee1cf8595cd87666b050f3a41  e2rm.1
-f2f1535e23eff2d6238b9c7c47aca9691b2f55e70f91552c88877b49d02abaae6bff95eb034d954f4977cf04c49bc23a4cf0a8f693356b54d013e8ed6f367a0d  e2tail.1
-68303012608439ba0db2e6e09ed163c0b291ccd90f7615122fd99847d795f241d6a3fd40da97d31c1016ee4f11458c2e7c415c7348397cadbb519c7e49654938  e2tools.7"
+sha512sums="5fde992727946d253acd46987944bdf49615d2ab45bbea715c86b304d117c6900dd70fcffb093f3d564247e27978b78b4710e7fea7ffd28375e804955fe4d5c9  e2tools-0.1.0.tar.gz"
