testing/liquibase: upgrade to 3.8.7

--- a/testing/liquibase/APKBUILD
+++ b/testing/liquibase/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Curt Tilmes <Curt.Tilmes@nasa.gov>
 # Maintainer: Curt Tilmes <Curt.Tilmes@nasa.gov>
 pkgname=liquibase
-pkgver=3.7.0
+pkgver=3.8.7
 pkgrel=0
 pkgdesc="Source Control for your Database"
 url="http://www.liquibase.org/"
@@ -9,24 +9,23 @@ arch="noarch"
 license="Apache-2.0"
 depends="openjdk8-jre bash"
 subpackages="$pkgname-doc"
-source="https://github.com/liquibase/liquibase/releases/download/liquibase-parent-$pkgver/liquibase-$pkgver-bin.tar.gz"
+source="https://github.com/liquibase/liquibase/releases/download/v$pkgver/liquibase-$pkgver.tar.gz"
 builddir="$srcdir"
-
-build() {
-	mv sdk/lib-sdk/slf4j-api-1.7.25.jar lib
-}
+options="!check" # No tests
 
 package() {
 	mkdir -p "$pkgdir"/usr/share/"$pkgname"
-	for file in lib liquibase liquibase.jar sdk; do
+	for file in lib liquibase liquibase.jar; do
 		cp -r $file "$pkgdir"/usr/share/"$pkgname"
 	done
 	mkdir -p "$pkgdir"/usr/bin
 	ln -s /usr/share/liquibase/liquibase "$pkgdir"/usr/bin/liquibase
 
 	mkdir -p "$pkgdir"/usr/share/doc/"$pkgname"
-	for file in LICENSE.txt README.txt; do
+	for file in ABOUT.txt GETTING_STARTED.txt LICENSE.txt README.txt \
+		changelog.txt; do
 		cp -r $file "$pkgdir"/usr/share/doc/"$pkgname"
 	done
 }
-sha512sums="55f11875be8f96d60f6535f415e82f7fa84e02286cded143cfd687532d5392bca1f62d7d7e58aeab362eba36cfac30e7eca388eb40021f1463b3fbf7ac890bf5  liquibase-3.7.0-bin.tar.gz"
+
+sha512sums="f970636a33282af4cdcd82bd3cd4918cb0fbcd231cff39c82e29303d32df8eef5c416fc8682dc7bf01a2479d7a1ffb06bf482262b54a33e8e1074dd06452bf26  liquibase-3.8.7.tar.gz"
