testing/py3-clikit: upgrade to 0.4.2
- adopt maintainership

--- a/testing/py3-clikit/APKBUILD
+++ b/testing/py3-clikit/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer:
+# Maintainer: Michał Polański <michal@polanski.me>
 pkgname=py3-clikit
 _realname=clikit
-pkgver=0.4.1
+pkgver=0.4.2
 pkgrel=0
 pkgdesc="Python3 library to create beautiful and testable command-line interfaces"
 options="!check" # No tests on pypi tarball, github uses pyproject.toml
@@ -22,4 +22,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="72b5ae1fbff0b7b63c4d36c051630d33bcc31d0ba90f71e50453fb0c6610074109e75c03d194a0803e94f4a1bc122adf2f1af1b74a87f85882c14f9bded56838  clikit-0.4.1.tar.gz"
+sha512sums="24f6013e7ecf3ae22cc8990efced1ce52c3ce11d0c532adc1c69cf28c571872440c92449e89923cde62a7ca0be0fff8665cf30035e2082b73141c2f7754ed45f  clikit-0.4.2.tar.gz"
