testing/poetry: upgrade to 1.0.4
- update url
- add missing dependencies
- adopt maintainership

--- a/testing/poetry/APKBUILD
+++ b/testing/poetry/APKBUILD
@@ -1,17 +1,19 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer:
+# Maintainer: Michał Polański <michal@polanski.me>
 pkgname=poetry
-pkgver=1.0.3
+pkgver=1.0.4
 pkgrel=0
 pkgdesc="Python3 dependency management and packaging system"
-url="https://poetry.eustace.io/"
+url="https://python-poetry.org"
 arch="noarch"
 license="MIT"
 depends="
 	python3
 	py3-cleo
+	py3-clikit
 	py3-requests
 	py3-cachy
+	py3-requests-toolbelt
 	py3-jsonschema
 	py3-pyrsistent
 	py3-parsing
@@ -20,7 +22,8 @@ depends="
 	py3-html5lib
 	py3-shellingham
 	py3-tomlkit
-	py3-clikit
+	py3-pexpect
+	py3-keyring
 	"
 source="
 	$pkgname-$pkgver.tar.gz::https://github.com/sdispater/poetry/archive/$pkgver.tar.gz
@@ -35,5 +38,6 @@ package() {
 
 	install -Dm0755 "$srcdir"/poetry.py "$pkgdir"/usr/bin/poetry
 }
-sha512sums="3bc2a1c9a5151fefb505c9dceea3aaa585e6902e1b89591db40455250760df386c3d9fe0c9d9cb1c644e1a0349bafd7fee6a72f4059085313528efd5fd86bb5b  poetry-1.0.3.tar.gz
+
+sha512sums="f7f317cd0c1ea6e999c1c80320baf6f14d731c820a17cb5ea98eac511b4f476a4b1bdc7143340433b49a8536a0f23f8d6ff10d8c3c2d9e46a1fb32e7f15a037a  poetry-1.0.4.tar.gz
 fca6cad49967e7fae7fcdd12e6d15da649f11dd0acfc6e0904eb75ec1f3b477a28328553a4b356422087a3f375d5a4851cf9c793eb041f7ae427352b4747a6fc  poetry.py"
