testing/py3-tomlkit: upgrade to 0.5.10
- adopt maintainership

--- a/testing/py3-tomlkit/APKBUILD
+++ b/testing/py3-tomlkit/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer:
+# Maintainer: Michał Polański <michal@polanski.me>
 pkgname=py3-tomlkit
 _realname=tomlkit
-pkgver=0.5.9
+pkgver=0.5.10
 pkgrel=0
 pkgdesc="Python3 library for parsing and modifying TOML"
 url="https://github.com/sdispater/tomlkit"
@@ -27,4 +27,4 @@ package() {
 	rm -rf "$pkgdir"/usr/lib/python3*/site-packages/tests
 }
 
-sha512sums="9683f68e21691064deaf28e302d19f142e8c83ae9fb915ab03c2530e6b0fb03aeab55039421681c4df45a452e21b988ab205a8824a13f725146c5a65b82e89ad  tomlkit-0.5.9.tar.gz"
+sha512sums="a1bcccd29e8b2ae1c62c535ce2681bcd8de115557b74e40d37dacdc7c7de05591687e54ed73c14ecf95bdc86d50da083da98b755bf1e5bd7459c74ad8a4b5d4d  tomlkit-0.5.10.tar.gz"
