community/virt-manager: refactor dependencies for virt-install

--- a/community/virt-manager/APKBUILD
+++ b/community/virt-manager/APKBUILD
@@ -1,18 +1,18 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=virt-manager
 pkgver=2.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="GUI for managing virtual machines"
 url="https://virt-manager.org/"
 arch="noarch"
 license="GPL-2.0-or-later"
-depends="python3 $pkgname-common py3-libxml2 py3-libvirt"
-_common_deps="libvirt-glib py3-gobject3 py3-requests spice-gtk vte3 libosinfo py3-cairo gtk-vnc>=0.5.2-r2 gtksourceview4"
+depends="python3 $pkgname-common spice-gtk vte3 py3-cairo gtk-vnc>=0.5.2-r2 gtksourceview4"
+_common_deps="libvirt-glib py3-libxml2 py3-libvirt py3-gobject3 py3-requests libosinfo"
 makedepends="intltool glib"
 subpackages="$pkgname-doc $pkgname-lang
 	$pkgname-common
 	virt-install:virt_install"
-source="https://releases.pagure.org/virt-manager/$pkgname-$pkgver.tar.gz"
+source="https://releases.pagure.org/virt-manager/virt-manager-$pkgver.tar.gz"
 
 # secfixes:
 #   2.2.1-r0:
@@ -43,7 +43,7 @@ common() {
 
 virt_install() {
 	pkgdesc="Utilities for installing virtual machines"
-	depends="$pkgname-common=$pkgver-r$pkgrel libosinfo"
+	depends="$pkgname-common=$pkgver-r$pkgrel"
 	mkdir -p "$subpkgdir"/usr/share/virt-manager "$subpkgdir"/usr/bin
 	mv "$pkgdir"/usr/share/virt-manager/virt-install \
 		"$pkgdir"/usr/share/virt-manager/virt-clone \
