testing/picard: upgrade to 2.3.1

--- a/testing/picard/APKBUILD
+++ b/testing/picard/APKBUILD
@@ -1,17 +1,17 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=picard
-pkgver=2.2.3
-pkgrel=2
+pkgver=2.3.1
+pkgrel=0
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://picard.musicbrainz.org/"
 pkgdesc="Official MusicBrainz tagger"
 license="GPL-2.0-or-later"
-depends="py3-mutagen chromaprint"
-makedepends="python3-dev py3-qt5 gettext"
-checkdepends="py3-mutagen"
-source="https://github.com/metabrainz/picard/archive/$pkgver/picard-$pkgver.tar.gz"
+depends="py3-mutagen chromaprint py3-qt5"
+makedepends="py3-setuptools python3-dev gettext"
 subpackages="$pkgname-lang"
+source="$pkgname-$pkgver.tar.gz::https://github.com/metabrainz/picard/archive/release-$pkgver.tar.gz"
+builddir="$srcdir/picard-release-$pkgver"
 
 build() {
 	python3 setup.py config
@@ -27,4 +27,4 @@ package() {
 		--disable-autoupdate
 }
 
-sha512sums="586b2874adce21a9f0e6bae8884a39d7ed9b9f0aa5aa20a536db036ed722c8915f5dc44774b45e4a00db89dcdbb7d986da00a44fb17387ee35f4fdc573beb30b  picard-2.2.3.tar.gz"
+sha512sums="fb5ac4cbd02f4b832cb23e3c8b5881eeca04b7b101c015a97fc20c8e0e7871ad2098b750a0c486af958b2bf30221b0c28666313f768dc7d70389519dd795d9cd  picard-2.3.1.tar.gz"
