--- a/community/sane/APKBUILD
+++ b/community/sane/APKBUILD
@@ -3,32 +3,36 @@
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=sane
 _pkgname=sane-backends
-pkgver=1.0.28
-pkgrel=1
+pkgver=1.0.29
+pkgrel=0
 pkgdesc="Scanner Access Now Easy - universal scanner interface"
 url="http://www.sane-project.org/"
 arch="all"
 license="GPL-2.0-or-later GPL-2.0-or-later-with-sane-exception Public-Domain"
 makedepends="diffutils file libtool libusb-dev v4l-utils-dev net-snmp-dev avahi-dev libpng-dev
-	libjpeg-turbo-dev tiff-dev libgphoto2-dev linux-headers"
+	libjpeg-turbo-dev tiff-dev libgphoto2-dev linux-headers libieee1284-dev"
 install="$pkgname-saned.pre-install $pkgname.pre-install"
 pkgusers="saned"
 pkggroups="scanner"
 _backends="abaton agfafocus apple artec artec_eplus48u as6e avision bh canon
-	canon630u canon_dr cardscan coolscan coolscan2 coolscan3 dc25
+	canon630u canon_dr canon_pp cardscan coolscan coolscan2 coolscan3 dc25
 	dc210 dc240 dell1600n_net dmc epjitsu epson epson2 epsonds fujitsu
-	genesys gphoto2 gt68xx hp hp3500 hp3900 hp4200 hp5400 hp5590
-	hpljm1005 hs2p ibm kodak kodakaio kvs1025 kvs20xx leo lexmark ma1509
-	magicolor matsushita microtek microtek2 mustek mustek_usb
-	nec net niash p5 pie pieusb pixma plustek plustek_pp ricoh ricoh2
+	genesys gphoto2 gt68xx hp hp3500 hp3900 hp4200 hp5400 hp5590 hpsj5s
+	hpljm1005 hs2p ibm kodak kodakaio kvs1025 kvs20xx kvs40xx leo lexmark
+	ma1509 magicolor matsushita microtek microtek2 mustek mustek_pp mustek_usb
+	mustek_usb2 nec net niash p5 pie pieusb pixma plustek plustek_pp ricoh ricoh2
 	rts8891 s9036 sceptre sharp sm3600 sm3840 snapscan sp15c st400 stv680
 	tamarack teco1 teco2 teco3 test u12 umax umax_pp umax1220u v4l
 	xerox_mfp"
 
 case "$CARCH" in
-	x86*)
-		_backends="$_backends qcam canon_pp hpsj5s mustek_pp"
-		makedepends="$makedepends libieee1284-dev" ;;
+	x86)
+		options="$options !check"
+		_backends="$_backends qcam"
+		;;
+	x86_64)
+		_backends="$_backends qcam"
+		;;
 esac
 
 _pkgdesc_dell1600n_net="SANE backend for Dell 1600n that supports colour and monochrome scans over ethernet, usb not supported"
@@ -37,8 +41,9 @@ for _backend in $_backends; do
 done
 subpackages="$pkgname-doc $pkgname-dev $subpackages $pkgname-utils $pkgname-saned
 	$pkgname-udev::noarch $_pkgname::noarch"
-source="https://gitlab.com/sane-project/backends/uploads/9e718daff347826f4cfe21126c8d5091/sane-backends-$pkgver.tar.gz
-	$pkgname-saned.initd
+source="https://gitlab.com/sane-project/backends/uploads/54f858b20a364fc35d820df935a86478/sane-backends-$pkgver.tar.gz
+	saned.initd
+	endian.patch
 	include.patch
 	network.patch
 	pidfile.patch
@@ -81,7 +86,7 @@ saned() {
 	mkdir -p "$subpkgdir"/etc/$pkgname.d "$subpkgdir"/usr
 	mv "$pkgdir"/etc/$pkgname.d/$name.conf "$subpkgdir"/etc/$pkgname.d
 	mv "$pkgdir"/usr/sbin "$subpkgdir"/usr/
-	install -Dm755 "$srcdir"/$pkgname-$name.initd "$subpkgdir"/etc/init.d/$name
+	install -Dm755 "$srcdir"/$name.initd "$subpkgdir"/etc/init.d/$name
 }
 
 utils() {
@@ -135,8 +140,9 @@ _backend() {
 	fi
 }
 
-sha512sums="84607739cea28c31f9a2f21df583c3d9f3ad1e7e87ad54fb8af8103450b22d2de6cf1670563eaa8310750491f840b377a2ca42c5eaee45aaec500a0a6792b3af  sane-backends-1.0.28.tar.gz
-0a06eaa28b345202f2bdf8361e06f843bb7a010b7d8f80132f742672c94249c43f64031cefa161e415e2e2ab3a53b23070fb63854283f9e040f5ff79394ac7d1  sane-saned.initd
+sha512sums="9ee431b0c048119719e15905f8743c7a0fd8bc6fcee81d75df8459a989cab7e39bf045518976713a7e1d94c816dd1a1e0fa190612d815c0ddb6a51d2abf3fd54  sane-backends-1.0.29.tar.gz
+0a06eaa28b345202f2bdf8361e06f843bb7a010b7d8f80132f742672c94249c43f64031cefa161e415e2e2ab3a53b23070fb63854283f9e040f5ff79394ac7d1  saned.initd
+918267659267264d0bc6f8b949f507f5e6d13c9df642bcdce5848f4217c7844399e515c589f44aef5aabf8667fc1034360e9b71a959612b1d16698fe40a0c16b  endian.patch
 1779ff8beb1ba5f9238c25d819a7f0045f7e257c19b511315feb85650e445ca86450a9e1d7ff8650499d3dae808589a6c2e358d5f3f39a3f40ce4999179b86d6  include.patch
 9cb595841f59b5105ecc85e4c0ad8781c52caa2354fb823c920ec467e88afbe47f2b3f4a7a3980bef5dbf22983c5786f051a9d10aea97b4bf7c4a05378592029  network.patch
 09505943f9441854a6c333f19e2535b4a646a8cc060fe82c6261e7d29c72773ebe98d43a91acc951f4336a3c8b4c84ab7c7b0763426136b4b59d9546bc2fa8c0  pidfile.patch
