community/libluv: upgrade to 1.34.2.1

--- a/community/libluv/APKBUILD
+++ b/community/libluv/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=libluv
 _release=1
-pkgver=1.34.1.$_release
+pkgver=1.34.2.$_release
 pkgrel=0
 pkgdesc="Bare libuv bindings for lua"
 options="!check" # No testsuite
@@ -20,6 +20,7 @@ build() {
 		-DLUA_BUILD_TYPE=System \
 		-DBUILD_MODULE=OFF \
 		-DBUILD_SHARED_LIBS=ON \
+		-DBUILD_STATIC_LIBS=OFF \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		.
 	ninja -C build
@@ -29,4 +30,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="8c5f317659ca9e1b7fc2eb42da9b309b0786716d21f64f03888c1a7a4ae7fe3edbeb8e2ce6cc82b8a640dfd47e26dabe9114e47619006070b9050837ca308e13  luv-1.34.1-1.tar.gz"
+sha512sums="b9e8877af026b573c55af64e0a643bef37e3a57ed3bca6f95546375d9daa59877cad5929287f38653b4d6c01b779087678430676c45b895ea35b8be6e3f8174a  luv-1.34.2-1.tar.gz"
