--- a/main/py-setuptools/APKBUILD
+++ b/main/py-setuptools/APKBUILD
@@ -1,29 +1,24 @@
 # Contributor: Andrew Manison <amanison@anselsystems.com>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
-pkgname=py-setuptools
-_pkgname=${pkgname#py-}
+pkgname=py2-setuptools
+_pkgname=${pkgname#py2-}
 pkgver=44.0.0
 pkgrel=0
-pkgdesc="A collection of enhancements to the Python distutils"
+pkgdesc="Collection of enhancements to the Python2 distutils"
 url="https://pypi.python.org/pypi/setuptools"
 arch="noarch"
 license="MIT"
 depends="python2"
-makedepends="python3"
-provides="py2-setuptools=$pkgver-r$pkgrel"
 options="!check" #no testsuite
-subpackages="py3-$_pkgname:_py3"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/pypa/$_pkgname/archive/v$pkgver.tar.gz"
-builddir="$srcdir"/$_pkgname-$pkgver
+builddir="$srcdir/$_pkgname-$pkgver"
 
 prepare() {
 	python2 bootstrap.py
-	python3 bootstrap.py
 }
 
 build() {
 	python2 setup.py build
-	python3 setup.py build
 }
 
 package() {
@@ -31,23 +26,5 @@ package() {
 	# we don't provide a non-suffixed easy_install
 	rm -f "$pkgdir"/usr/bin/easy_install
 }
-
-_py() {
-	local python="$1"
-	pkgdesc="$pkgdesc (for $python)"
-	depends="$python"
-	install_if="$pkgname=$pkgver-r$pkgrel $python"
-
-	cd "$builddir"
-	$python setup.py install --prefix=/usr --root="$subpkgdir"
-	# we don't provide a non-suffixed easy_install
-	rm -f "$subpkgdir"/usr/bin/easy_install
-}
-
-_py3() {
-	replaces="python3"
-	_py python3
-}
-
 
 sha512sums="48febee840612a56c7f4cb0bc3983bf61a6a08c53dfcb95403f6631061481ba391fc0472d608ea6c0078fda8bcc7bb9f6dd8b73d473f5e4349d6eaeb2ab0050b  setuptools-44.0.0.tar.gz"
