--- a/main/py3-appdirs/APKBUILD
+++ b/main/py3-appdirs/APKBUILD
@@ -3,13 +3,12 @@
 pkgname=py3-appdirs
 _pkgname=${pkgname#py3-}
 pkgver=1.4.3
-pkgrel=1
+pkgrel=2
 pkgdesc="A small Python module for determining appropriate platform-specific dirs."
 url="https://pypi.org/project/appdirs/"
 arch="noarch"
 license="MIT"
 depends="python3"
-makedepends="py3-setuptools"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -18,9 +17,8 @@ build() {
 }
 
 check() {
-	python3 setup.py test
+	PYTHONPATH="$PWD" python3 test/test_api.py
 }
-
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
