main/py3-parsing: use distutils instead of setuptools to avoid depcycle

--- a/main/py3-parsing/APKBUILD
+++ b/main/py3-parsing/APKBUILD
@@ -3,25 +3,31 @@
 pkgname=py3-parsing
 _pkgname=pyparsing
 pkgver=2.4.6
-pkgrel=0
+pkgrel=1
 pkgdesc="An object-oriented approach to text processing"
 url="http://pyparsing.wikispaces.com/"
 arch="noarch"
 license="MIT"
 depends="python3"
-makedepends="py3-setuptools"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
 replaces="py-parsing" # Backwards compatibility
 provides="py-parsing=$pkgver-r$pkgrel" # Backwards compatibility
 
-build() {
-	python3 setup.py build
+check() {
+	python3 -m unittest
 }
 
 package() {
-	python3 setup.py install --prefix=/usr --root="$pkgdir"
+	# Can't use setuptools since setuptools depends on this
+	mkdir -p "$pkgdir"/usr/lib/python3.8/site-packages
+
+	cp -rv $_pkgname.egg-info \
+		"$pkgdir"/usr/lib/python3.8/site-packages/$_pkgname-$pkgver-py3.8.egg-info
+	cp -rv pyparsing.py "$pkgdir"/usr/lib/python3.8/site-packages/
+
+	python3 -m compileall -f -q "$pkgdir"/usr/lib/python3.8/site-packages/*.py
 }
 
 sha512sums="6c8e7e2ecd633d26eb6a0547fe805b5c5ce459d4ed7ec7a5db1431b563125fdbce0b76dc05a6ff220f26e906d21e70691a008dfed06642a52e962bbbf1d21cd4  pyparsing-2.4.6.tar.gz"
