main/py3-setuptools: use system components

--- a/main/py3-setuptools/APKBUILD
+++ b/main/py3-setuptools/APKBUILD
@@ -5,13 +5,13 @@
 pkgname=py3-setuptools
 _pkgname=${pkgname#py3-}
 pkgver=45.2.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Collection of enhancements to the Python3 distutils"
 options="!check" # Tests require packages out of main/
 url="https://pypi.python.org/pypi/setuptools"
 arch="noarch"
 license="MIT"
-depends="python3"
+depends="python3 py3-ordered-set py3-appdirs py3-packaging"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/pypa/$_pkgname/archive/v$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -22,6 +22,25 @@ export SETUPTOOLS_INSTALL_WINDOWS_SPECIFIC_FILES=0
 
 prepare() {
 	default_prepare
+
+	# Unbundle
+	rm -rf pkg_resources/extern pkg_resources/_vendor \
+		setuptools/extern setuptools/_vendor
+
+	# Upstream devendoring logic is badly broken, see:
+	# https://bugs.archlinux.org/task/58670
+	# https://github.com/pypa/pip/issues/5429
+	# https://github.com/pypa/setuptools/issues/1383
+	# The simplest fix is to simply rewrite import paths to use the canonical
+	# location in the first place
+	for _module in setuptools pkg_resources '' ; do
+		find . -name \*.py -exec sed -i \
+			-e 's/from '$_module.extern' import/import/' \
+			-e 's/from '$_module.extern'./from /' \
+			-e 's/import '$_module.extern'./import /' \
+			-e "s/__import__('$_module.extern./__import__('/" \
+			{} +
+	done
 
 	# Fix post-release tag
 	sed -e '/tag_build = .post/d' \
