main/luajit: modernize, cleanup old patches

--- a/main/luajit/APKBUILD
+++ b/main/luajit/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 # Contributor: Bartłomiej Piotrowski <nospam@bpiotrowski.pl>
 pkgname=luajit
-_pkgname=LuaJIT
+_pkgname=moonjit
 pkgver=5.1.20190925
 _pkgver=fedora-${pkgver##*.}
 _compatver=2.1.0-beta3
@@ -10,22 +10,17 @@ pkgdesc="Integration fork of the original LuaJIT"
 url="https://github.com/siddhesh/LuaJIT"
 arch="all"
 license="MIT"
-makedepends="$depends_dev paxmark"
 provides="lua"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://github.com/siddhesh/$pkgname/archive/$pkgname-$_pkgver.tar.gz
+source="https://github.com/siddhesh/luajit/archive/luajit-$_pkgver.tar.gz
 	module-paths.patch"
 builddir="$srcdir/$_pkgname-$pkgname-$_pkgver"
 
 build() {
-	cd "$builddir"
-
 	make amalg PREFIX=/usr
 }
 
 check() {
-	cd "$builddir"
-
 	# tests fail
 	sed -i -e '/redir.lua/d' test/lib/ffi/index
 	case $CARCH in
@@ -35,13 +30,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"
-
 	make install DESTDIR="$pkgdir" PREFIX=/usr
-
-	local paxflags="-m"
-	[ "$CARCH" = "x86" ] && paxflags="-msp"
-	paxmark $paxflags "$pkgdir"/usr/bin/luajit-$_compatver
 
 	install -Dm644 COPYRIGHT \
 		"$pkgdir"/usr/share/licenses/$pkgname/COPYRIGHT
