testing/coccinelle: upgrade to 1.0.8

--- a/testing/coccinelle/APKBUILD
+++ b/testing/coccinelle/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Marian Buschsieweke <marian.buschsieweke@ovgu.de>
 # Maintainer: Marian Buschsieweke <marian.buschsieweke@ovgu.de>
 pkgname=coccinelle
-pkgver=1.0.7
+pkgver=1.0.8
 pkgrel=0
 pkgdesc="A SmPL (Semantic Patch Language) implementation"
 url="http://coccinelle.lip6.fr/"
@@ -19,19 +19,15 @@ makedepends="
 	pcre-dev
 	"
 depends="python3"
-source="
-	http://$pkgname.lip6.fr/distrib/$pkgname-$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/coccinelle/coccinelle/archive/$pkgver.tar.gz
 	SCORE_expected.sexp
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
-	cd "$builddir"
 	ln -sf ../../SCORE_expected.sexp tests/
 }
 
 build() {
-	cd "$builddir"
 	./autogen
 	./configure \
 		--prefix=/usr \
@@ -42,14 +38,12 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" MANDIR="/usr/share/man" install
 }
 
-sha512sums="94770f9ac41f34b519e1680e0b7b042c15862b3df7cfa94fbbc54d1ed0ee4743a993d3eac271decdd46d1fc3fcbe4aadabfcbab91b691c2b6e1a6019b46f1d28  coccinelle-1.0.7.tar.gz
-2f8aa98483c1710fb9a660de04f6a7ba0014e9ea3caf2b9d13a27c73b899afa86d799f78f119135739727a3570247585cad61a2a3a7fda8868a0fd75e1498d6b  SCORE_expected.sexp"
+sha512sums="496b1632c92cc026fbe28f784f56d4cd78f89a8ccd28dc7db1069c0c6b2b239675a10da305e37ed2a03c605668ecd3399aeed522f12ec3fbbf3ca07277ab7bce  coccinelle-1.0.8.tar.gz
+5b5947b61eea90874f48bce06e045761d3b19af857541869a2a01818f4a41bc7181f78313170780e7f05ba88d2652c6b3caa427bd9f51ebb9267837090f7f7da  SCORE_expected.sexp"
