--- a/community/dnsdist/APKBUILD
+++ b/community/dnsdist/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Vince Mele <vmele@inoc.com>
 # Maintainer:
-pkgname="dnsdist"
-pkgver="1.3.3"
-pkgrel=7
+pkgname=dnsdist
+pkgver=1.4.0
+pkgrel=0
 pkgdesc="dnsdist is a highly DNS-, DoS-, and abuse-aware loadbalancer."
 url="https://dnsdist.org"
 arch="all"
@@ -10,29 +10,22 @@ license="GPL-2.0-only"
 _lua_version="5.1"
 depends="$pkgname-common !$pkgname-luajit"
 checkdepends="findutils"
-makedepends="boost-dev fstrm-dev libedit-dev libsodium-dev lua${_lua_version}-dev net-snmp-dev protobuf-dev re2-dev"
+makedepends="boost-dev fstrm-dev libedit-dev libsodium-dev lua$_lua_version-dev
+	net-snmp-dev protobuf-dev re2-dev luajit-dev"
 pkgusers="dnsdist"
 pkggroups="dnsdist"
 install="$pkgname-common.pre-install"
-subpackages="$pkgname-common::noarch $pkgname-doc"
-source="https://downloads.powerdns.com/releases/$pkgname-$pkgver.tar.bz2"
-builddir="$srcdir/$pkgname-$pkgver"
+subpackages="$pkgname-common::noarch $pkgname-doc $pkgname-luajit"
+source="https://downloads.powerdns.com/releases/dnsdist-$pkgver.tar.bz2"
 
 # luajit is not available for s390x
 case "$CARCH" in
-	s390x) ;;
-	*)
-		makedepends="$makedepends luajit-dev"
-		subpackages="$subpackages $pkgname-luajit"
-		;;
+	ppc64le) options="$options !check" ;;
 esac
 
 prepare() {
 	default_prepare
-
-	case "$subpackages" in
-		*-luajit*) cp -a "$builddir" "$builddir-jit";;
-	esac
+	cp -a "$builddir" "$builddir-jit"
 }
 
 _configure() {
@@ -40,13 +33,13 @@ _configure() {
 	local _luajit
 	local _unit_tests
 
-	[ "$_arg" = '-jit' ] || _arg='' _luajit="lua${_lua_version}"
+	[ "$_arg" = '-jit' ] || _arg='' _luajit="lua$_lua_version"
 
 	cd "$builddir$_arg"
 
 	# builds are timing out on armhf
 	_unit_tests='--enable-unit-tests'
-	case "${DRONE_REPO_OWNER}-${DRONE_RUNNER_PLATFORM}-${CARCH}" in
+	case "$DRONE_REPO_OWNER-$DRONE_RUNNER_PLATFORM-$CARCH" in
 		alpinelinux-linux/arm-armhf) _unit_tests="${_unit_tests}=no" ;;
 	esac
 
@@ -58,8 +51,6 @@ _configure() {
 		--mandir=/usr/share/man \
 		--enable-dnscrypt \
 		--enable-dns-over-tls \
-		--enable-fstrm \
-		--enable-libsodium \
 		--enable-re2 \
 		${_unit_tests} \
 		--with-protobuf \
@@ -69,8 +60,6 @@ _configure() {
 }
 
 build() {
-	cd "$builddir"
-
 	_configure
 	make
 
@@ -87,11 +76,8 @@ _cat_found_file() {
 }
 
 check() {
-	cd "$builddir"
 	make check || _cat_found_file 'test-suite.log'
 	./dnsdist --version
-
-	[ -d "$builddir-jit" ] || return 0
 
 	cd "$builddir-jit"
 	make check || _cat_found_file 'test-suite.log'
@@ -99,7 +85,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	make -j1 DESTDIR="$pkgdir" install
 
 	mv "$pkgdir/usr/bin/$pkgname" "$pkgdir/usr/bin/$pkgname-lua"
@@ -127,4 +112,4 @@ luajit() {
 	mv "$pkgdir/usr/bin/$pkgname-luajit" "$subpkgdir/usr/bin/$pkgname"
 }
 
-sha512sums="c0e3435eafc1f7bcdf41346cecf7b089cc142716f94058f9ec262d0c6ad16467e0b8bed5abc648829c597120c94f998602849ded574e75bfc1a1fb70c1b719ad  dnsdist-1.3.3.tar.bz2"
+sha512sums="c9450e97325d8ad8c8c3a395412c46ea8053cbe1ebe73329a1618212ba29bdf2f8da908ae2b90c314b5aab613387f42363e3a5322b1a36f60190fb48e1c425c5  dnsdist-1.4.0.tar.bz2"
