main/luajit: disable some tests on armhf

--- a/main/luajit/APKBUILD
+++ b/main/luajit/APKBUILD
@@ -25,7 +25,7 @@ check() {
 	sed -i -e '/redir.lua/d' test/lib/ffi/index
 	case $CARCH in
 		ppc64le|s390x) sed -i -e '/math_special.lua/d' test/unportable/index;;
-		armv7)
+		armv7|armhf)
 			sed -i -e '/math_special.lua/d' test/unportable/index
 			sed -i -e '/bit.lua/d' test/lib/index
 			;;
