--- a/testing/py3-pytest-expect/APKBUILD
+++ b/testing/py3-pytest-expect/APKBUILD
@@ -1,16 +1,18 @@
 # Contributor: Stefan Wagner <stw@bit-strickerei.de>
 # Maintainer: Stefan Wagner <stw@bit-strickerei.de>
-pkgname=pytest-expect
+pkgname=py3-pytest-expect
+_pkgname=pytest-expect
 pkgver=1.1.0
-pkgrel=3
-pkgdesc="py.test plugin that stores test expectations."
-options="!check" # No testsuite in tarball
+pkgrel=4
+pkgdesc="A pytest plugin that stores test expectations"
+options="!check" # no test suite
 url="https://github.com/gsnedders/pytest-expect"
 arch="noarch"
 license="MIT"
-depends="pytest py3-u-msgpack"
+depends="py3-pytest py3-u-msgpack"
 makedepends="py3-setuptools"
-source="$pkgname-$pkgver.tar.gz::https://github.com/gsnedders/$pkgname/archive/$pkgver.tar.gz"
+source="$_pkgname-$pkgver.tar.gz::https://github.com/gsnedders/pytest-expect/archive/$pkgver.tar.gz"
+builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
 	python3 setup.py build
