main/wayland: update url to use https

--- a/main/wayland/APKBUILD
+++ b/main/wayland/APKBUILD
@@ -3,10 +3,10 @@
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=wayland
 pkgver=1.18.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A computer display server protocol"
-url="http://wayland.freedesktop.org"
-arch=all
+url="https://wayland.freedesktop.org"
+arch="all"
 license="MIT"
 depends="$pkgname-libs-client $pkgname-libs-cursor $pkgname-libs-egl $pkgname-libs-server"
 depends_dev="libffi-dev expat-dev"
@@ -16,7 +16,6 @@ subpackages="$pkgname-dev $pkgname-libs-client:_libs $pkgname-libs-egl:_libs
 source="https://wayland.freedesktop.org/releases/wayland-$pkgver.tar.xz
 	tests-ignore-debugger.patch
 	"
-
 
 build() {
 	./configure \
