main/wayland-protocols: update url to use https

--- a/main/wayland-protocols/APKBUILD
+++ b/main/wayland-protocols/APKBUILD
@@ -2,17 +2,16 @@
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=wayland-protocols
 pkgver=1.18
-pkgrel=0
+pkgrel=1
 pkgdesc="Protocols and protocol extensions complementing the Wayland core protocol"
-url="http://wayland.freedesktop.org"
+url="https://wayland.freedesktop.org"
 arch="noarch"
 license="MIT"
 provides="$pkgname-dev"
 makedepends="wayland-dev"
-source="https://wayland.freedesktop.org/releases/$pkgname-$pkgver.tar.xz"
+source="https://wayland.freedesktop.org/releases/wayland-protocols-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
