community/php7-pecl-msgpack: upgrade to 2.1.0

--- a/community/php7-pecl-msgpack/APKBUILD
+++ b/community/php7-pecl-msgpack/APKBUILD
@@ -2,8 +2,7 @@
 # Maintainer: Fabio Ribeiro <fabiorphp@gmail.com>
 pkgname=php7-pecl-msgpack
 _pkgreal=msgpack
-pkgver=2.1.0_beta1
-_pkgver=${pkgver/_/}
+pkgver=2.1.0
 pkgrel=0
 pkgdesc="PHP extension provides API for communicating with MessagePack serialization - PECL"
 url="https://pecl.php.net/package/msgpack"
@@ -11,8 +10,8 @@ arch="all"
 license="BSD-3-Clause"
 depends="php7-session php7-sockets"
 makedepends="php7-dev autoconf re2c"
-source="https://pecl.php.net/get/$_pkgreal-$_pkgver.tgz"
-builddir="$srcdir"/$_pkgreal-$_pkgver
+source="https://pecl.php.net/get/$_pkgreal-$pkgver.tgz"
+builddir="$srcdir"/$_pkgreal-$pkgver
 provides="php7-msgpack=$pkgver-r$pkgrel" # for backward compatibility
 replaces="php7-msgpack" # for backward compatibility
 
@@ -38,4 +37,4 @@ package() {
 	echo "extension=$_pkgreal.so" > "$pkgdir"/etc/php7/conf.d/50_$_pkgreal.ini
 }
 
-sha512sums="c128e4d5528dcbee37fb11b7f3062aa03f1d721b665e7231d56f30b331fd6a8be3a5adae587847de6a434b27789ea62c62ad9857ac26597e68b640911d8c6900  msgpack-2.1.0beta1.tgz"
+sha512sums="e024694076224796b2fb4dbd4473c5ac782951911437d0ee668231a1908f924a3a28dd616c0821929b425ee5ec06ef51f870f15b677171429049f4ae5f7befb7  msgpack-2.1.0.tgz"
