community/py3-ufolib2: upgrade to 0.6.1

--- a/community/py3-ufolib2/APKBUILD
+++ b/community/py3-ufolib2/APKBUILD
@@ -1,20 +1,24 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-ufolib2
-pkgver=0.5.1
+pkgver=0.6.1
 pkgrel=0
 pkgdesc="UFO font library"
 url="https://github.com/fonttools/ufoLib2"
 arch="noarch"
 license="Apache-2.0"
 depends="python3 py3-attrs py3-fonttools"
-makedepends="py3-setuptools"
+makedepends="py3-setuptools py3-setuptools_scm"
 checkdepends="py3-pytest py3-pytest-cov"
 source="$pkgname-$pkgver.tar.gz::https://github.com/fonttools/ufoLib2/archive/v$pkgver.tar.gz"
 builddir="$srcdir/ufoLib2-$pkgver"
 
+prepare() {
+	default_prepare
+	export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
+}
+
 build() {
-	git init
 	python3 setup.py build
 }
 
@@ -26,4 +30,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="6fbdc657482151626fc03a947de119c9fba777bd65eea237ce507ac90907b7eff7256d7b3d833f1d8cacdfa622ca448c530700027ef6a8668a2433d53709ff91  py3-ufolib2-0.5.1.tar.gz"
+sha512sums="66315cc778074c709b1f0376dc68db740185d27afdd8f86c9bdddebff3cc8e6c0b8d6ddc2dff38b23a8b64b8d74fc11212d9a39d33ce70ddc1482790a9852087  py3-ufolib2-0.6.1.tar.gz"
