--- a/community/sway/APKBUILD
+++ b/community/sway/APKBUILD
@@ -1,8 +1,9 @@
 # Contributor: Henrik Riomar <henrik.riomar@gmail.com>
+# Contributor: Antoine Fontaine <antoine.fontaine@epfl.ch>
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=sway
 pkgver=1.4
-pkgrel=3
+pkgrel=4
 pkgdesc="i3 compatible window manager for Wayland"
 url="https://swaywm.org"
 arch="all"
@@ -32,6 +33,7 @@ subpackages="
 	$pkgname-zsh-completion:zshcomp:noarch
 	"
 source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/sway/archive/$pkgver.tar.gz
+	sway.desktop
 	"
 
 build() {
@@ -74,6 +76,10 @@ zshcomp() {
 package() {
 	DESTDIR="$pkgdir" ninja -C output install
 	chmod u+s "$pkgdir"/usr/bin/sway
+
+	install -D -m644 "$srcdir"/sway.desktop \
+		"$pkgdir"/usr/share/wayland-sessions/sway.desktop
 }
 
-sha512sums="3b280bdfdbdae8fb9b4f555bc630c64e7c1d09f7b2c783b99413863a6b620d50cd2b6d10d63e11fdfb9c678fce9a403228ac52fa69fb52561ffbd06790505a71  sway-1.4.tar.gz"
+sha512sums="3b280bdfdbdae8fb9b4f555bc630c64e7c1d09f7b2c783b99413863a6b620d50cd2b6d10d63e11fdfb9c678fce9a403228ac52fa69fb52561ffbd06790505a71  sway-1.4.tar.gz
+c9bc08fbd9d059c037ad1e3b7ab5e91bcde27dce248cc558c1f126b01c85b1d0d4ed4bb10e3f27bc818a06e60a81f19478b95529d4eeb32036e2c6ea9f29db36  sway.desktop"
