main/perl-datetime: upgrade to 1.52

--- a/main/perl-datetime/APKBUILD
+++ b/main/perl-datetime/APKBUILD
@@ -3,45 +3,40 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=perl-datetime
 _pkgreal=DateTime
-pkgver=1.51
-pkgrel=1
+pkgver=1.52
+pkgrel=0
 pkgdesc="A date and time object for Perl"
-url="https://search.cpan.org/dist/DateTime/"
+url="https://metacpan.org/release/DateTime"
 arch="all"
 license="Artistic-2.0"
-cpandepends="perl-datetime-locale perl-try-tiny perl-dist-checkconflicts
+depends="perl perl-datetime-locale perl-try-tiny perl-dist-checkconflicts
 	perl-params-validationcompiler perl-datetime-timezone perl-namespace-autoclean
 	perl-specio"
-cpanmakedepends="perl-test-warnings perl-cpan-meta-check perl-test-fatal"
-depends="$cpandepends"
-makedepends="perl-dev perl-file-sharedir $cpanmakedepends"
+makedepends="perl-test-warnings perl-cpan-meta-check perl-test-fatal
+	perl-dev perl-file-sharedir"
 subpackages="$pkgname-doc"
-source="https://search.cpan.org/CPAN/authors/id/D/DR/DROLSKY/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/D/DR/DROLSKY/DateTime-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
 	default_prepare
 
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="d94d673ecefb7ed8bd485f7be9f3c2c0e9a07c402793f14f5af3bc026cc875d7d2a151f72f1c1d3518e08af133eab247796400215f4304f785d17d84e53caded  DateTime-1.51.tar.gz"
+sha512sums="c2e359f480396e0da16afbec362cb744f201f6c777fa916228f0adfd26a848b9451535feeda4e1531e5afb40a286e3b11a44e95dc0947dc4e2ba714973bb5ac4  DateTime-1.52.tar.gz"
