community/perl-datetime-format-strptime: upgrade to 1.77

--- a/community/perl-datetime-format-strptime/APKBUILD
+++ b/community/perl-datetime-format-strptime/APKBUILD
@@ -3,44 +3,38 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-datetime-format-strptime
 _pkgreal=DateTime-Format-Strptime
-pkgver=1.76
-pkgrel=1
+pkgver=1.77
+pkgrel=0
 pkgdesc="Parse and format strp and strf time patterns"
 url="https://metacpan.org/release/DateTime-Format-Strptime/"
 arch="noarch"
 license="Artistic-2.0"
-cpandepends="perl-params-validate perl-datetime perl-try-tiny
-		perl-package-deprecationmanager perl-datetime-timezone
-		perl-datetime-locale"
-cpanmakedepends="perl-test-warnings perl-test-fatal "
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+depends="perl-params-validate perl-datetime perl-try-tiny
+	perl-package-deprecationmanager perl-datetime-timezone
+	perl-datetime-locale"
+makedepends="perl-test-warnings perl-test-fatal perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/D/DR/DROLSKY/$_pkgreal-$pkgver.tar.gz"
 
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
-	export CFLAGS=`perl -MConfig -E 'say $Config{ccflags}'`
+	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="896c6f1bdb77cf21f1170aae97466a96d7a4469d478f31ea66c16ed9ba5c86edd184fa578ea113bcc90a25fbd6b4ae5264053f1ef6092764b15f7fd461b491c9  DateTime-Format-Strptime-1.76.tar.gz"
+sha512sums="d6f997831ffe054b6052dc7d9a783fa64fb2dd90babbd97ea2dd11eacc0e6d1a6718c2dc877c444863be502482f6fc856f02f0feae8abb36220b60f417ee87ec  DateTime-Format-Strptime-1.77.tar.gz"
