--- a/community/py3-html5lib/APKBUILD
+++ b/community/py3-html5lib/APKBUILD
@@ -11,7 +11,7 @@ url="https://github.com/html5lib/html5lib-python"
 arch="noarch"
 license="MIT"
 depends="py3-six py3-webencodings"
-checkdepends="pytest pytest-expect py-mock"
+checkdepends="py3-pytest py3-pytest-expect py3-mock"
 makedepends="py3-setuptools"
 source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
