testing/poetry: upgrade to 1.0.5

--- a/testing/poetry/APKBUILD
+++ b/testing/poetry/APKBUILD
@@ -1,12 +1,13 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=poetry
-pkgver=1.0.4
+pkgver=1.0.5
 pkgrel=0
 pkgdesc="Python3 dependency management and packaging system"
 url="https://python-poetry.org"
 arch="noarch"
 license="MIT"
+options="!check" # TODO: add tests
 depends="
 	python3
 	py3-cleo
@@ -39,5 +40,5 @@ package() {
 	install -Dm0755 "$srcdir"/poetry.py "$pkgdir"/usr/bin/poetry
 }
 
-sha512sums="f7f317cd0c1ea6e999c1c80320baf6f14d731c820a17cb5ea98eac511b4f476a4b1bdc7143340433b49a8536a0f23f8d6ff10d8c3c2d9e46a1fb32e7f15a037a  poetry-1.0.4.tar.gz
+sha512sums="4a1d5bda510aa5bdbb8655635c22b7358fd3278e2cd9cc170546510df7de039ec300388faafaa3a463b757a155c3a3324143d06a226a61348a509042c8da6a56  poetry-1.0.5.tar.gz
 fca6cad49967e7fae7fcdd12e6d15da649f11dd0acfc6e0904eb75ec1f3b477a28328553a4b356422087a3f375d5a4851cf9c793eb041f7ae427352b4747a6fc  poetry.py"
