community/perl-html-form: upgrade to 6.07

--- a/community/perl-html-form/APKBUILD
+++ b/community/perl-html-form/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Timothy Legge <timlegge@gmail.com>
 pkgname=perl-html-form
 _pkgreal=HTML-Form
-pkgver=6.05
+pkgver=6.07
 pkgrel=0
 pkgdesc="Class that represents an HTML form element"
 url="https://metacpan.org/release/HTML-Form/"
@@ -11,6 +11,7 @@ arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 depends="perl-uri perl-html-parser perl-http-message"
 makedepends="perl-dev"
+checkdepends="perl-http-message"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/O/OA/OALDERS/HTML-Form-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
@@ -31,4 +32,5 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="9c9c5adfcd2f7167f54156c430dbef9baa8c2aae4375e652bda9a04d48ae68c763db205e862070b97ea6cc34c3f8ddc56d82d02796b6f4b682e6707eefd00465  HTML-Form-6.05.tar.gz"
+
+sha512sums="32aac4bb85609c2c596e771678bd4d36f3e34deaa3de7333f089c8f887045780db949b5a1573254557eb0247713232cca5e90f89a80e0d53049840660ad3017e  HTML-Form-6.07.tar.gz"
