--- a/main/unzip/APKBUILD
+++ b/main/unzip/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=unzip
 pkgver=6.0
 _pkgver=${pkgver//./}
-pkgrel=4
+pkgrel=5
 pkgdesc="Extract PKZIP-compatible .zip files"
 url="http://www.info-zip.org/UnZip.html"
 arch="all"
@@ -43,7 +43,7 @@ build() {
 
 	make -f unix/Makefile \
 		CC="${CHOST}-gcc" \
-		LOCAL_ZIP="${CFLAGS} ${CPPFLAGS}" \
+		LOCAL_UNZIP="${CFLAGS} ${CPPFLAGS}" \
 		prefix=/usr generic
 }
 
