community/pulseaudio: install -alsa if alsa is installed as well

--- a/community/pulseaudio/APKBUILD
+++ b/community/pulseaudio/APKBUILD
@@ -5,7 +5,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=pulseaudio
 pkgver=13.0
-pkgrel=5
+pkgrel=6
 pkgdesc="A featureful, general-purpose sound server"
 url="https://www.freedesktop.org/wiki/Software/PulseAudio/"
 arch="all"
@@ -175,6 +175,7 @@ bluez() {
 
 alsa() {
 	pkgdesc="Pulseaudio alsa support"
+	install_if="$pkgname alsa-lib"
 	mkdir -p "$subpkgdir"/usr/lib/pulse-$pkgver/modules
 	mv "$pkgdir"/usr/lib/pulse-$pkgver/modules/*alsa*.so \
 		"$subpkgdir"/usr/lib/pulse-$pkgver/modules/
