--- a/main/perl-test-deep/APKBUILD
+++ b/main/perl-test-deep/APKBUILD
@@ -1,39 +1,31 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=perl-test-deep
-pkgver=1.128
-pkgrel=1
+pkgver=1.130
+pkgrel=0
 pkgdesc="Test::Deep perl module"
 url="https://metacpan.org/release/Test-Deep/"
 arch="noarch"
 license="GPL-2.0 or Artistic"
 depends="perl perl-test-tester perl-test-nowarnings"
 makedepends="perl-dev"
-install=""
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/R/RJ/RJBS/Test-Deep-$pkgver.tar.gz"
 
-_builddir="$srcdir"/Test-Deep-$pkgver
-prepare() {
-	local i
-	cd "$_builddir"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
-}
+builddir="$srcdir"/Test-Deep-$pkgver
 
 build() {
-	cd "$_builddir"
-	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor || return 1
-	make && make test || return 1
+	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
+	make
+}
+
+check() {
+	make test
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="d4642b3268a10d8e882beabfbb3b3bf891a57aa7ebb74bc4919a4368df9c9acd2351498401538ae50299071f99e06b4443686d20f8c9f95f5fd588309ccee302  Test-Deep-1.128.tar.gz"
+sha512sums="de34197c97d44c68dd43372fa5a4d905a2ad636b5503c5f1443476a85b921f42cd07d475af8901dfee9deff1f29deef440c1783cdcc7f93c5f5030c4548ff9cf  Test-Deep-1.130.tar.gz"
