--- a/testing/pmbootstrap/APKBUILD
+++ b/testing/pmbootstrap/APKBUILD
@@ -1,12 +1,13 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Oliver Smith <ollieparanoid@postmarketos.org>
 pkgname=pmbootstrap
-pkgver=1.15.0
+pkgver=1.16.0
 pkgrel=0
 pkgdesc="Sophisticated chroot/build/flash tool to develop and install postmarketOS"
 url="https://gitlab.com/postmarketOS/pmbootstrap"
 arch="noarch"
 license="GPL-3.0-or-later"
+makedepends="py3-setuptools"
 depends="python3 coreutils procps openssl"
 checkdepends="pytest"
 source="$pkgname-$pkgver.tar.gz::https://gitlab.com/postmarketos/pmbootstrap/-/archive/$pkgver/pmbootstrap-$pkgver.tar.gz
@@ -26,5 +27,5 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 	install -Dm644 "$srcdir"/modules-load.conf "$pkgdir"/usr/lib/modules-load.d/pmbootstrap.conf
 }
-sha512sums="5b3e7a7dfa41bffd66015390133f2f4bdc3569d43111b65c55c68bbc52891dda132ba66eda776d17cfb032c236dcceedc8e3ff5682e939fd56185c2c741112fa  pmbootstrap-1.15.0.tar.gz
+sha512sums="8006370f574ee42eea00e9c737d16f7a6129f327ef16477c867b3643625e05307ece6af40e125495ba21cc376ab9b194cc3a32c4c9a8d0b7afd34c58696e91eb  pmbootstrap-1.16.0.tar.gz
 f8026ab32234b885e69252459047f70160c54319113bc449000aa7c05bd016f00a46cee05c8f5251682f967ab44a12c06fbbb3c02d0a57ccb836cff810ce1a40  modules-load.conf"
