community/proj: upgrade to 7.0.0

--- a/community/proj/APKBUILD
+++ b/community/proj/APKBUILD
@@ -1,13 +1,14 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=proj
-pkgver=6.3.1
-pkgrel=1
+pkgver=7.0.0
+pkgrel=0
 _datumgridver=1.8
 pkgdesc="PROJ coordinate transformation software library"
 url="https://proj.org/"
 arch="all"
 license="MIT"
-makedepends="cmake sqlite sqlite-dev gtest-dev"
+makedepends="cmake sqlite sqlite-dev gtest-dev tiff-dev
+	curl-dev"
 checkdepends="bash"
 subpackages="
 	$pkgname-doc
@@ -41,6 +42,10 @@ build() {
 	make
 }
 
+check() {
+	CTEST_OUTPUT_ON_FAILURE=TRUE ctest --force-new-ctest-process
+}
+
 package() {
 	depends="$pkgname-datumgrid"
 	replaces="proj4"
@@ -64,9 +69,5 @@ util() {
 	mv "$pkgdir/usr/bin" "$subpkgdir/usr"
 }
 
-check() {
-	CTEST_OUTPUT_ON_FAILURE=TRUE ctest --force-new-ctest-process
-}
-
-sha512sums="669b752f491bd99e320b0750c7129251a562a303e008e3d89c8e71baefd7f6d4ccb08234b3039c03694e2cc93b8dde81771cd7ffd981ff8045d855240a480a5e  proj-6.3.1.tar.gz
+sha512sums="fd92937656c85c7f6969947323fa2752df0c931dd9c942b11c67dcae132f61f404c8da57ed7e7177aaa82f579e42b1c3611e6c2cc34d70454e548ad8afece243  proj-7.0.0.tar.gz
 991206f17348b3de484eb5364d773cd06577057228c2d1a0a1c1658308e2596ca13338a666fa71ddd76d538f23dd5bf21e178fd26a785717edd847a17e5c0cd1  proj-datumgrid-1.8.zip"
