community/libieee1284: enable on all arches

--- a/community/libieee1284/APKBUILD
+++ b/community/libieee1284/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.2.11
 pkgrel=2
 pkgdesc="A cross-platform library for parallel port access"
 url="http://cyberelk.net/tim/libieee1284"
-arch="x86 x86_64"
+arch="all"
 license="GPL-2.0-or-later"
 makedepends="file"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
@@ -21,7 +21,8 @@ build() {
 	./configure \
 		--prefix=/usr \
 		--mandir=/usr/share/man \
-		--without-python
+		--without-python \
+		ac_cv_header_sys_io_h=no
 	make
 }
 
