--- a/community/py3-oscrypto/APKBUILD
+++ b/community/py3-oscrypto/APKBUILD
@@ -3,13 +3,14 @@
 pkgname=py3-oscrypto
 _pkgname=${pkgname##py3-}
 pkgver=1.2.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Python crypto library backed by the OS"
 url="https://github.com/wbond/oscrypto"
 arch="noarch"
 license="MIT"
 options="net" # required to make tests pass in abuild rootbld
-depends="python3 py3-setuptools py3-asn1crypto>=1.0.0"
+depends="python3 py3-asn1crypto>=1.0.0"
+makedepends="py3-setuptools"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/wbond/oscrypto/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
