--- a/community/gnome-authenticator/APKBUILD
+++ b/community/gnome-authenticator/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-authenticator
 pkgver=3.32.2
-pkgrel=5
+pkgrel=6
 pkgdesc="A Two-Factor Authentication application"
 url="https://gitlab.gnome.org/World/Authenticator"
 arch="all !s390x" # missing libhandy on s390x
 license="GPL-3.0-only"
 depends="python3 py3-otp py3-beautifulsoup4 py3-pillow py3-pyfavicon py3-pyzbar
-	py3-yoyo-migrations libhandy"
+	py3-yoyo-migrations libhandy py3-setuptools"
 makedepends="meson gtk+3.0-dev libsecret-dev zbar-dev gobject-introspection-dev"
 checkdepends="appstream-glib desktop-file-utils"
 subpackages="$pkgname-lang"
