--- a/community/kirigami2/APKBUILD
+++ b/community/kirigami2/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kirigami2
 pkgver=5.67.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A QtQuick based components set"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.0-only"
-depends="qt5-qtgraphicaleffects"
+depends="qt5-qtgraphicaleffects qt5-qtquickcontrols2"
 depends_dev="qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtsvg-dev qt5-qtquickcontrols2-dev kcoreaddons-dev kconfig-dev kwindowsystem-dev"
 makedepends="$depends_dev extra-cmake-modules qt5-qttools-dev"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kirigami2-$pkgver.tar.xz"
