testing/papirus-icon-theme: upgrade to 20200201

--- a/testing/papirus-icon-theme/APKBUILD
+++ b/testing/papirus-icon-theme/APKBUILD
@@ -1,17 +1,17 @@
 # Contributor: David Demelier <markand@malikania.fr>
 # Maintainer: David Demelier <markand@malikania.fr>
-pkgname="papirus-icon-theme"
-pkgver=20200102
+pkgname=papirus-icon-theme
+pkgver=20200201
 pkgrel=0
 pkgdesc="papirus icon theme"
+options="!check"
 url="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme"
 arch="noarch"
 license="GPL-3.0-only"
 source="$pkgname-$pkgver.tar.gz::https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/archive/$pkgver.tar.gz"
-options="!check"
 
 package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="63e80ff061657bf6512d3906cae67d24221cdaea70002281fa91c4c8f127a504cac4e1a1afce0da9555ef917d30a390891c7f8d7f6c11064865819b88887a84f  papirus-icon-theme-20200102.tar.gz"
+sha512sums="07ed45eb409ed12f57657f058f9a5a03dec77679ed598dc8645536a614ecc5424c60be57f10de20ca72204d2a21152fdd62adadf2637bbfa1266d588c787d7e9  papirus-icon-theme-20200201.tar.gz"
