testing/perl-test-utf8: upgrade to 1.02

--- a/testing/perl-test-utf8/APKBUILD
+++ b/testing/perl-test-utf8/APKBUILD
@@ -2,33 +2,30 @@
 # Maintainer: Stuart Cardall <developer@it-offshore.co.uk>
 pkgname=perl-test-utf8
 _realname=Test-utf8
-pkgver=1.01
-pkgrel=1
+pkgver=1.02
+pkgrel=0
 pkgdesc="A collection of tests useful for dealing with utf8 strings"
 url="https://github.com/2shortplanks/Test-utf8"
 arch="noarch"
-license="PerlArtistic"
-depends=""
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl"
 makedepends="perl-dev perl-module-install"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/M/MA/MARKF/$_realname-$pkgver.tar.gz"
 builddir="$srcdir/$_realname-$pkgver"
 
 build() {
-	cd "$builddir"
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 	make
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="07dcd5ed98a63f7d96bb0fc629b168773d02bb4c93c5bc44ec60738fc29669794547dfde5913f9de682cd583cf85f4d82b6151398aaebcfec9278525447b9c4e  Test-utf8-1.01.tar.gz"
+sha512sums="f544174ad570c5e027acf66dcf335ddc4be3727488559933a389dbd7f2214e66490f96d0e816677310468076719d891fa3da80524b2b10345d8be8eebf4a1469  Test-utf8-1.02.tar.gz"
