community/gtkspell: switch to enchant2

--- a/community/gtkspell/APKBUILD
+++ b/community/gtkspell/APKBUILD
@@ -1,18 +1,21 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gtkspell
 pkgver=2.0.16
-pkgrel=7
-pkgdesc="GtkSpell provides word-processor-style highlighting and replacement of misspelled words in a GtkTextView widget"
+pkgrel=8
+pkgdesc="Word-processor-style highlighting and replacement of misspelled words in a GtkTextView widget"
 url="http://gtkspell.sourceforge.net/"
 arch="all"
 license="GPL-2.0-only"
-makedepends="gtk+2.0-dev enchant-dev intltool"
+makedepends="gtk+2.0-dev enchant2-dev automake autoconf libtool
+	gtk-doc"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
-source="http://gtkspell.sourceforge.net/download/gtkspell-$pkgver.tar.gz"
+source="http://gtkspell.sourceforge.net/download/gtkspell-$pkgver.tar.gz
+	enchant-2.patch
+	"
 
 prepare() {
-	update_config_sub
 	default_prepare
+	autoreconf -fi
 }
 
 build() {
@@ -31,4 +34,5 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="7d3afb327c2e15608194e6ee6110107a0ce082e483788d831d636b2e579472304137373c09a966d8e5c0cd2f830bf2e0ee477c9b5fca7da6ee27fd1498915b9d  gtkspell-2.0.16.tar.gz"
+sha512sums="7d3afb327c2e15608194e6ee6110107a0ce082e483788d831d636b2e579472304137373c09a966d8e5c0cd2f830bf2e0ee477c9b5fca7da6ee27fd1498915b9d  gtkspell-2.0.16.tar.gz
+a1a8b2409677b1903d75e6d2baff0455e5adb0fc19cc0a054c02249a307544ab35f2d2386c79cbc7894f9cbb154fd51d4b4eb5061d3ccfc418ffc126a9f03704  enchant-2.patch"
