community/claws-mail: switch to enchant-2

--- a/community/claws-mail/APKBUILD
+++ b/community/claws-mail/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=claws-mail
 pkgver=3.17.5
-pkgrel=0
+pkgrel=1
 pkgdesc="GTK+ based e-mail client."
 url="https://www.claws-mail.org"
 arch="all"
@@ -32,7 +32,7 @@ subpackages="$pkgname-dbg $pkgname-dev $pkgname-doc $pkgname-lang
 	$pkgname-plugins-managesieve:_managesieve
 	"
 
-makedepends="gtk+-dev startup-notification-dev enchant-dev
+makedepends="gtk+-dev startup-notification-dev enchant2-dev
 	libgcrypt-dev libsm-dev gnutls-dev curl-dev dbus-glib-dev
 	libetpan-dev openldap-dev gpgme-dev libsoup-dev perl-dev
 	poppler-dev libarchive-dev libnotify-dev pinentry-gtk
