community/bluefish: switch to enchant-2

--- a/community/bluefish/APKBUILD
+++ b/community/bluefish/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: ScrumpyJack <scrumpyjack@st.ilet.to>
 pkgname=bluefish
 pkgver=2.2.11
-pkgrel=0
+pkgrel=1
 pkgdesc="Bluefish is an editor targeted towards programmers and webdevelopers"
 url="http://bluefish.openoffice.nl/"
 arch="all"
 license="GPL-3.0-or-later"
-makedepends="libtool libxml2-dev gtk+3.0-dev enchant-dev gucharmap-dev intltool"
+makedepends="libtool libxml2-dev gtk+3.0-dev enchant2-dev gucharmap-dev intltool"
 subpackages="$pkgname-lang $pkgname-doc"
 source="http://www.bennewitz.com/bluefish/stable/source/bluefish-$pkgver.tar.bz2"
 
