--- a/community/abiword/APKBUILD
+++ b/community/abiword/APKBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=abiword
 pkgver=3.0.4
-pkgrel=1
+pkgrel=2
 pkgdesc="A fully-featured word processor"
 url="http://www.abisource.com"
 arch="all !s390x"
 options="!check"  # Test suite requires valgrind, etc
 license="GPL-2.0-or-later"
-makedepends="gtk+3.0-dev readline-dev libgsf-dev enchant-dev fribidi-dev wv-dev
+makedepends="gtk+3.0-dev readline-dev libgsf-dev fribidi-dev wv-dev
 	popt-dev libjpeg-turbo-dev librsvg-dev bzip2-dev goffice-dev pcre-dev
 	libxslt-dev perl"
 
